--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,6 +3,7 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
+
 .hero-container {
   background: linear-gradient(135deg, #ff9d2f, #e57249);
   color: white;
@@ -447,4 +448,11 @@ body {
     flex-wrap: wrap;
     justify-content: center;
   }
+}
+.platform-name {
+  font-size: 5.5rem; /* Bigger size */
+  font-weight: 900;
+  margin-bottom: 10px;
+  color: #fff; /* White text to contrast orange background */
+  letter-spacing: 2px;
 }
